tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__fish_wrapper_handles_empty_chunks.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
✅ [32m[32mCreated worktree [1mfish-minimal[22m based off [1mmain[22m @ [1m[TMPDIR]/repo.fish-minimal[39m[22m[39m
