tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__fish_wrapper_preserves_progress_messages.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
✅ [32m[32mCreated worktree [1mfish-bg[22m based off [1mmain[22m @ [1m[TMPDIR]/repo.fish-bg[39m[22m[39m
🔄 [36mRunning project post-start:[39m
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'fish background task'[0m[2m[0m
