tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__merge_with_mixed_stdout_stderr_bash.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
🔄 [36mRunning pre-merge [1mcheck1[0m:[0m
[107m [0m  [2m[0m[2m[34m[TMPDIR]/repo/mixed-output.sh[0m[2m check1 3[0m
[check1] stdout line 1
[check1] stderr line 1
[check1] stdout line 2
[check1] stderr line 2
[check1] stdout line 3
[check1] stderr line 3
[check1] stdout complete
[check1] stderr complete
🔄 [36mRunning pre-merge [1mcheck2[0m:[0m
[107m [0m  [2m[0m[2m[34m[TMPDIR]/repo/mixed-output.sh[0m[2m check2 3[0m
[check2] stdout line 1
[check2] stderr line 1
[check2] stdout line 2
[check2] stderr line 2
[check2] stdout line 3
[check2] stderr line 3
[check2] stdout complete
[check2] stderr complete
🔄 [36mMerging 1 commit to [1m[36mmain[0m[36m @ [2m[36m[HASH][0m[36m (no commit/squash/rebase needed)[0m
[107m [0m  * [33m[HASH][m Add feature
[107m [0m   feature.txt | 1 [32m+[m
[107m [0m   1 file changed, 1 insertion(+)
✅ [32mMerged to [1m[32mmain[0m[32m (1 commit, 1 file, [32m+1[0m)[0m
🔄 [36mRemoving [1m[36mfeature[0m[36m worktree & branch in background[0m
