tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__merge_with_no_hooks_fish.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized().as_ref()
---
🔄 [36mValidating merge...[0m
🔄 [36mRebasing onto [1m[36mmain[0m...[0m
🔄 [36mPushing 1 commit to [1m[36mmain[0m @ 986886a[0m

* [33m986886a[m[33m ([m[1;36mHEAD[m[33m -> [m[1;32mfeature-nohooks[m[33m)[m Add feature

 feature.txt | 1 [32m+[m
 1 file changed, 1 insertion(+)

✅ [32mPushed to [1m[32mmain[0m (1 commit, 1 file, [32m+1[0m)  [0m
🔄 [36mCleaning up worktree...[0m
✅ [32mReturned to primary at [TMPDIR]/test-repo[0m
