tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__merge_with_post_merge_hooks_fish.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized().as_ref()
---
🔄 [36mValidating merge...[0m
🔄 [36mRebasing onto [1m[36mmain[0m...[0m
🔄 [36mPushing 1 commit to [1m[36mmain[0m @ c6eae6a[0m

* [33mc6eae6a[m[33m ([m[1;36mHEAD[m[33m -> [m[1;32mfeature-post[m[33m)[m Add feature

 feature.txt | 1 [32m+[m
 1 file changed, 1 insertion(+)

✅ [32mPushed to [1m[32mmain[0m (1 commit, 1 file, [32m+1[0m)  [0m
🔄 [36mRunning post-merge command [1m[36mcleanup[0m:[0m
[40m [0m echo '✓ Cleaning up temporary files'

🔄 [36mRunning post-merge command [1m[36mdeploy[0m:[0m
[40m [0m echo '✓ Triggering deployment pipeline'

🔄 [36mRunning post-merge command [1m[36mnotify[0m:[0m
[40m [0m echo '✓ Merge successful - notifying team'

🔄 [36mCleaning up worktree...[0m
✅ [32mReturned to primary at [TMPDIR]/test-repo[0m
✓ Cleaning up temporary files
✓ Triggering deployment pipeline
✓ Merge successful - notifying team
