tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__merge_with_pre_merge_success_bash.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized().as_ref()
---
🔄 [36mValidating merge...[0m
🔄 [36mRunning pre-merge command [1m[36mformat[0m:[0m
[40m [0m echo '✓ Code formatting check passed'

✓ Code formatting check passed

🔄 [36mRunning pre-merge command [1m[36mlint[0m:[0m
[40m [0m echo '✓ Linting passed - no warnings'

✓ Linting passed - no warnings

🔄 [36mRunning pre-merge command [1m[36mtest[0m:[0m
[40m [0m echo '✓ All 47 tests passed in 2.3s'

✓ All 47 tests passed in 2.3s

🔄 [36mRebasing onto [1m[36mmain[0m...[0m
🔄 [36mPushing 1 commit to [1m[36mmain[0m @ d067f01[0m

* [33md067f01[m[33m ([m[1;36mHEAD[m[33m -> [m[1;32mfeature[m[33m)[m Add feature

 feature.txt | 1 [32m+[m
 1 file changed, 1 insertion(+)

✅ [32mPushed to [1m[32mmain[0m (1 commit, 1 file, [32m+1[0m)  [0m
🔄 [36mCleaning up worktree...[0m

✅ [32mReturned to primary at [TMPDIR]/test-repo[0m
